k8s/21-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telecom-upload-service
  namespace: telecom-upload
spec:
  selector:
    app: telecom-upload-service
  ports:
    - name: http
      port: 80
      targetPort: http
